Fri Feb  3 00:48:50 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/win32.c (isInternalCmd): ignore case for shell's internal
	  command. (marge from HEAD)

Fri Feb  2 16:14:51 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_sort_bang): returns self, even if its length is
	  less than 2.

	* eval.c (POP_VARS): propagate DVAR_DONT_RECYCLE, if
	  SCOPE_DONT_RECYCLE of ruby_scope is set.

Wed Jan 31 22:27:29 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: gcc-2.95.2-7(cygwin) support.
	  add -mwin32 if available.

	* cygwin/GNUmakefile: ditto.

Mon Jan 29 17:36:19 2001  TOYOFUKU Chikanobu  <toyofuku@juice.or.jp>

	* eval.c (rb_eval): nd_iter evaluation should be wrapped by
	  BEGIN_CALLARGS and END_CALLARGS.

Mon Jan 29 01:40:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_independent): should not clear str->orig here.
	  it's too early.

Wed Jan 24 01:45:49 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_BLOCK_TAG): call rb_gc_force_recycle() if block has
	  not been objectified.

	* eval.c (rb_callcc): should nail down block->tag history to avoid
	  rb_gc_force_recycle(). 

Tue Jan 23 18:51:57 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): should finalize objects in
	  deferred_final_list too.

Tue Jan 23 16:10:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (os_live_obj): do not list terminated object.

	* gc.c (os_obj_of): ditto.

	* gc.c (rb_gc_mark): support new T_BLKTAG tag.

	* gc.c (obj_free): ditto.

	* eval.c (new_blktag): creation of new block tag, which holds
	  destination of global jump and orphan status.

	* eval.c (block_pass): break from orphan Proc object will raise a
	  LocalJumpError exception.

Mon Jan 22 16:33:16 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* mkconfig.rb: autoconf 2.49 support.

Sat Jan 20 03:54:00 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
