@@ -1,3 +1,9 @@
+Tue Feb  6 21:01:29 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>
+
+	* lib/net/protocol.rb: ignore EOFError on only specified case.
+
+	* lib/net/http.rb: take HTTP 1.0 server into account.
+
 Fri Feb  3 00:48:50 2001  Usaku Nakamura  <usa@osb.att.ne.jp>
 
 	* win32/win32.c (isInternalCmd): ignore case for shell's internal
